chore(api): Initial refactor (minus `text` package) to remove deprecations and use modern language features